toml-pretty-deser/compilation_failure_tests/tagged_enum_root.stderr
error: unknown tpd enum attribute `root`
 --> compilation_failure_tests/tagged_enum_root.rs:8:7
  |
8 | #[tpd(root, tag="kind")]
  |       ^^^^
